[workspace]
members = ["bin/*", "lib/*"]
default-members = ["bin/blobary", "lib/blobary"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.73"
description = "Blobary, a place for blobs."
documentation = "https://github.com/artob/blobary/blob/master/README.md"
readme = true
homepage = "https://github.com/artob/blobary"
repository = "https://github.com/artob/blobary"
license = "Unlicense"
license-file = "UNLICENSE"
keywords = ["blob", "blob-storage", "blob-store"]
categories = ["data-structures", "database-implementations", "filesystem"]
publish = true

[workspace.dependencies]
