[package]
name = "blobary"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["gzip", "lz4", "tracing", "zeroize"]
gzip = ["dep:libflate"]
lz4 = ["dep:lz4_flex"]
tracing = ["dep:tracing"]
zeroize = ["dep:zeroize"]

[dependencies]
blake3 = { version = "1.5.0", features = ["mmap", "neon", "rayon", "zeroize"]}
cap-std = "2.0.0"
cap-tempfile = "2.0.0"
libflate = { version = "2.0.0", optional = true }
lz4_flex = { version = "0.11.1", optional = true }
tracing = { version = "0.1.39", optional = true }
zerocopy = "0.7.11"
zerocopy-derive = "0.7.11"
zeroize = { version = "1.6.0", optional = true }
