[package]
name = "blobary"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["base58", "encrypt", "gzip", "lz4", "magic", "redis", "sqlite", "tracing"]
base58 = ["dep:bs58"]
encrypt = ["dep:zeroize"]
gzip = ["dep:libflate"]
lz4 = ["dep:lz4_flex"]
magic = ["dep:infer"] # TODO: file-format
redis = ["dep:redis"]
sqlite = []
tracing = ["dep:tracing"]

[dependencies]
blake3 = { version = "1.5.0", features = ["mmap", "neon", "rayon", "zeroize"]}
bs58 = { version = "0.5.0", optional = true }
cap-std.workspace = true
cap-tempfile.workspace = true
infer = { version = "0.15.0", optional = true, default-features = false }
libflate = { version = "2.0.0", optional = true }
lz4_flex = { version = "0.11.1", optional = true }
redis = { version = "0.23.3", optional = true, features = ["keep-alive"]}
tracing = { version = "0.1.39", optional = true }
zerocopy.workspace = true
zerocopy-derive.workspace = true
zeroize = { version = "1.6.0", optional = true }
